--- a/.github/workflows/retype-action.yml
+++ b/.github/workflows/retype-action.yml
@@ -15,7 +15,11 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 7.0.x
 
       - uses: retypeapp/action-build@latest
         with:
